# document-ai

./: README.md  compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2a59fd220e2d_initial_migration.py  faaf6f6cba68_initial_migration.py
app/: config.py  crud.py  database.py  ingest.py  llm.py  main.py  models.py
app/routers/: documents.py
