[project]
name = "document-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "ollama>=0.4.8",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.6"]
